--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aioredis==2.0.1
 annotated-types==0.7.0
 anyio==4.8.0
 async-timeout==5.0.1
+bcrypt==4.3.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
@@ -40,8 +41,10 @@ pytest-coverage==0.0
 python-dotenv==1.0.1
 python-jose==3.3.0
 python-multipart==0.0.20
+redis==6.2.0
 requests==2.32.3
 rsa==4.9
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
